--- a/package.json
+++ b/package.json
@@ -26,17 +26,23 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@sendgrid/mail": "^8.1.3",
+    "aws-sdk": "^2.1651.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.6.0",
     "google-auth-library": "^9.11.0",
+    "handlebars": "^4.7.8",
+    "html-pdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "passport": "^0.7.0",
     "passport-auth0": "^1.4.4",
