--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ API_V1=http://localhost:8081
 JWT_SECRET=password
 JWT_EXPIRES=365d
 GOOGLE_CLIENT_ID=840350238281-5iechd2hmdl97499lvvj1nqlec2h28dn.apps.googleusercontent.com
+AWS_BUCKET_NAME=tekko-contentok
