--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.3.1",
+    "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "@sendgrid/mail": "^8.1.3",
     "aws-sdk": "^2.1651.0",
@@ -44,6 +44,7 @@
     "handlebars": "^4.7.8",
     "html-pdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
+    "mailersend": "^2.2.0",
     "passport": "^0.7.0",
     "passport-auth0": "^1.4.4",
     "passport-jwt": "^4.0.1",
