--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@sendgrid/mail": "^8.1.3",
     "aws-sdk": "^2.1651.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
